# vulkan-render-system

./: .gitignore  CMakeLists.txt  README.org  compile_shaders.sh  conanfile.py
VulkanRenderer/: BaseTexturePipeline.hpp  Bitmap.hpp  Canvas.hpp  GeometryPass.hpp  Mesh.hpp  NormRenderPipeline.hpp  ShaderTexture.hpp  Utils.hpp  VertexBuffer.hpp  VertexPosNormColor.hpp  VertexPosNormColorUV.hpp  VulkanRenderer.hpp
VulkanRenderer/compiled_shaders/: NormColor.vert.spv  Texture.vert.spv  Wireframe.vert.spv
VulkanRenderer/shaders/: Texture.frag  Texture.vert  Wireframe.vert
VulkanRenderer/shaders/old/: basic.frag
compiled_shaders/: NormColor.vert.spv  Texture.frag.spv
include/VulkanRenderer/: BaseTexturePipeline.hpp  Bitmap.hpp  Camera.hpp  Canvas.hpp  Context.hpp  DebugMessenger.hpp  DescriptorPool.hpp  Error.hpp  Exception.hpp  Extent.hpp  GeometryPass.hpp  Light.hpp  Mesh.hpp  NormRenderPipeline.hpp  Presenter.hpp  Renderable.hpp  Renderer.hpp  ShaderTexture.hpp  ShadowCaster.hpp  StrongType.hpp  Texture.hpp  Transform.hpp  Utils.hpp  Vertex.hpp  VertexBuffer.hpp  VertexPosNormColor.hpp  VertexPosNormColorUV.hpp  VulkanRenderer.hpp  WireframePipeline.hpp  compile_shaders.sh  glm.hpp
include/VulkanRenderer/shaders/: NormColor.vert
shaders/: Diffuse.vert  Material.frag  Material.shared  Material.vert  NormColor.vert  OrthographicDepth.frag  PerspectiveDepth.frag  PerspectiveDepth.vert  Wireframe.frag  Wireframe.vert
source/: BaseTexturePipeline.hpp  Bitmap.cpp  Camera.cpp  Canvas.cpp  ContextImpl.cpp  ContextImpl.hpp  DebugMessenger.cpp  DescriptorPoolImpl.cpp  DescriptorPoolImpl.hpp  FlightFrames.cpp  FlightFrames.hpp  GeometryPassImpl.cpp  GeometryPassImpl.hpp  LightUniforms.cpp  LightUniforms.hpp  MaterialPipeline.cpp  MaterialPipeline.hpp  MaterialPipeline2.cpp  MaterialPipeline2.hpp  Mesh.cpp  NormRenderPipeline.hpp  PipelineUtils.cpp  PipelineUtils.hpp  PresenterImpl.cpp  PresenterImpl.hpp  RendererImpl.cpp  RendererImpl.hpp  ShaderTextureImpl.cpp  ShaderTextureImpl.hpp  ShadowCaster.cpp  ShadowPass.cpp  ShadowPass.hpp  Texture.cpp  TextureImpl.cpp  TextureImpl.hpp  Utils.cpp  VertexBufferImpl.cpp  VertexBufferImpl.hpp  VertexImpl.cpp  VertexImpl.hpp  (+6 more)
test/api/: CMakeLists.txt  LoadResources.hpp  conanfile.txt  install_conan_packages.sh  main.cpp
test/api/scenes/: normaltest.json  shadowtest.json  simplescene.json
test_conan_package/: CMakeLists.txt  conanfile.txt  test.cpp
